Added dragger and dummy placeholder image to test the dragger functionality.

--- a/public/css/sass/main.scss
+++ b/public/css/sass/main.scss
@@ -1,6 +1,10 @@
 @import "general-mixin";
 @import "variables";
 
+html, body {
+    overflow: hidden;
+}
+
 body {
     background-color: $gray;
     font-size: $fontSize;
